--- a/Spring_App/pom.xml
+++ b/Spring_App/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.7.RELEASE</version>
+    <version>2.3.1.BUILD-SNAPSHOT</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   
@@ -37,6 +37,5 @@
 </dependency>
 
 </dependencies>
-
 
 </project>
