--- a/Spring_App/pom.xml
+++ b/Spring_App/pom.xml
@@ -36,6 +36,18 @@
     <scope>test</scope>
 </dependency>
 
+<dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-embedder</artifactId>
+      <version>3.1.0</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    
 </dependencies>
 
 </project>
