--- a/Spring_App/pom.xml
+++ b/Spring_App/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>Spring_App</groupId>
-  <artifactId>Spring_App</artifactId>
+  <artifactId>first-app</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>cricket-spring</name>
   <parent>
@@ -57,7 +57,7 @@
                   <verbose>true</verbose>
                   <images>
                      <image>
-                        <name>first-app</name>
+                        <name>${project.artifactId}</name>
                         <build>
                            <from>java:8-jdk-alpine</from>
                            <entryPoint>
