--- a/Spring_App/src/main/resources/application.properties
+++ b/Spring_App/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8081
+spring.datasource.url=jdbc:postgresql://dbpostgresql:5432/mydb
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
