--- a/Spring_App/pom.xml
+++ b/Spring_App/pom.xml
@@ -76,7 +76,8 @@
                      <id>build</id>
                      <phase>package</phase>
                      <goals>
-                        <goal>build</goal>			     
+                        <goal>build</goal>	
+			<goal>push</goal>
                      </goals>
                   </execution>
                </executions>
