--- a/Spring_App/pom.xml
+++ b/Spring_App/pom.xml
@@ -80,7 +80,7 @@
                      </goals>
                   </execution>
 		  <execution>
-                     <id>build</id>
+                     <id>push</id>
                      <phase>package</phase>
                      <goals>
                         <goal>push</goal>			
